# bandaid

./: .gitignore  README.md  bandaid.py  pyproject.toml  requirements.txt
notebooks/: hello.ipynb
src/bandaid/: __init__.py  __main__.py  bandaid_placer.py  placer.py  skin_segmenter.py
tests/: test_placer_unit.py  test_real_image.py
